--- a/1-Kekonvergenan.qmd
+++ b/1-Kekonvergenan.qmd
@@ -131,7 +131,7 @@ $$
 Di semua titik $F_X(x)$ kontinu. Pembuktian dari definisi tersebut cukup sederhana: cari fungsi kumulatif, lalu cari limitnya.
 
 
-## Hukum Bilangan Besar Lemah 
+# Hukum Bilangan Besar Lemah 
 
 Misalkan $\{ X_{n}\}$ adalah barisan bilangan peubah acak yang
 berdistribusi identik dan saling bebas dengan nilai tengah $\mu$ dan
@@ -153,12 +153,13 @@ E\left( {\overline{X}}_{n} \right)&= \frac{1}{n}E\left( \sum_{i = 1}^{n}X_{i} \r
 V\left( {\overline{X}}_{n} \right)&= \frac{1}{n^{2}}V\left( \sum_{i = 1}^{n}X_{i} \right) = \frac{1}{n^{2}}.n.\sigma^{2} = \frac{\sigma^{2}}{n}
 \end{aligned}
 $$
+
 Sehingga, untuk setiap $\varepsilon > 0$:
 $$
 \lim_{n \rightarrow \infty}P\left( \left| {\bar{X}}_{n} - \mu \right| \geq \epsilon \right) \leq \frac{\sigma^{2}}{n\varepsilon^{2}} \rightarrow 0
 $$
 
-### Teorema Limit Pusat 
+# Teorema Limit Pusat 
 
 Misalkan $X_{1},X_{2},\ldots,X_{n}$ adalah contoh acak dari populasi
 dengan nilai tengah $\mu$ dan ragam $\sigma^{2}$ (sebaran tidak harus
