--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,22 @@
 ---
-title: "Praktikum Inferensia Statistika"
+title: "Praktikum Inferensia Statistika (STA 1303)"
 ---
 
-Situs web ini akan mengandung modul inferensia statistika, informasi penugasan, serta pembahasan-pembahasan dari tugas yang ada.
+Situs web ini akan mengandung modul Inferensia Statistika, informasi penugasan, serta pembahasan-pembahasan dari tugas yang ada. Informasi pertemuan dimasukkan di sini:
+
+| Pertemuan | Materi                                                                      | Tanggal           | Lokasi   | Modul | Tugas/Kuis     | Pembahasan          |
+|-----------|-----------------------------------------------------------------------------|-------------------|----------|-------|----------------|---------------------|
+| 1         | Kekonvergenan, Hukum Bilangan Besar, Teorema Limit Pusat                    | 15 Agustus 2022   | CCR 2.10 | Ada   |                | Latihan Soal, Tugas |
+| 2         | Sebaran Percontohan dari Populasi Normal, Pendugaan Parameter, Metode Momen | 22 Agustus 2022   | CCR 2.10 | Ada   | Tugas Kelompok | Latihan Soal, Tugas |
+| 3         | Penduga Kemungkinan Maksimum                                                | 29 Agustus 2022   | CCR 2.10 | Ada   | Tugas Individu | Latihan Soal, Tugas |
+| 4         | Penduga Bayes                                                               | 5 September 2022  | Online   | Ada   | Tugas Kelompok | Latihan Soal        |
+| 5         | Statistik Cukup                                                             | 12 September 2022 | TBD      | TBD   | TBD            | TBD                 |
+| 6         |                                                                             |                   |          |       |                |                     |
+| 7         |                                                                             |                   |          |       |                |                     |
+| 8         |                                                                             |                   |          |       |                |                     |
+| 9         |                                                                             |                   |          |       |                |                     |
+| 10        |                                                                             |                   |          |       |                |                     |
+| 11        |                                                                             |                   |          |       |                |                     |
+| 12        |                                                                             |                   |          |       |                |                     |
+| 13        |                                                                             |                   |          |       |                |                     |
+| 14        |                                                                             |                   |          |       |                |                     |
